# sphero_ros

./: README.md
bearing_only_controller/launch/: exp_setup.launch
bearing_only_controller/nodes/: controller.py  plotwindow.py  targets.py  write2file.py
bearing_only_controller/nodes/esaclib/: EID_recon.py  SAC.py  __init__.py  basis.py  basis0.py  double_integrator.py  eid.py  ekf.py  erg_cost_func.py  odeint2.py  sensor.py  single_integrator.py
bearing_only_controller/nodes/sac_lib/: SAC.py  __init__.py  debugger.py  erg_cost_func.py
kinect_tracker/: CMakeLists.txt  package.xml
kinect_tracker/launch/: kinect_tracker.launch  tracker.launch
kinect_tracker/scripts/: kinect_tracking.py  track.py
koop_sac/: CMakeLists.txt  README.md  package.xml
koop_sac/launch/: exp_setup.launch
koop_sac/nodes/: K3rd.mat  K3rdupdate.mat  Kaffine.mat  Kaffine2.mat  Klinear.mat  controller.py  debugger.py  kmat.npy  koop_script.py  write2file.py
koop_sac/nodes/esaclib/: cost_func.py
koop_sac/nodes/experimental_data/: cmd.npy  export_data.py  plot_data.py  xdat.npy
koop_sac/nodes/koopsaclib/: Data_Export.mat  SAC.py  __init__.py  basis_func.py  cost_func.py  delay_state_integrator.py  double_integrator.py  koop_fun.py  koop_fun3.py  koop_fun3affine.py  koopman.py
ps3_controller/: CMakeLists.txt  README.md  package.xml
ps3_controller/launch/: contr.launch
ps3_controller/nodes/: controller.py
sphero_bringup/launch/: sphero.launch
sphero_description/: test.launch
sphero_node/: package.xml
sphero_node/nodes/: sphero.py
sphero_node/nodes/launch/: predator_sphero.launch  prey_sphero.launch  sphero.launch
sphero_node/nodes/sphero_driver/: sphero_driver.py
tactile_esac/: .gitignore  CMakeLists.txt  README.md  package.xml
tactile_esac/nodes/: controller.py
tactile_esac/nodes/sac_lib/: basis.py  odeint2.py  sensor.py
tracker/: CMakeLists.txt  package.xml
tracker/launch/: tracker.launch
tracker/scripts/: ball_tracking.py  filtered_objects.py  reference_code.txt  track.py  track_robot.py
(+2486 files in other folders)
