<?xml version="1.0"?>
<package>
  <name>kinect_tracker</name>
  <version>0.0.0</version>
  <description>kinect sphero tracker package</description>

  <maintainer email="ianabraham21@gmail.com">Ian Abraham</maintainer>
  <license>GPLv3</license>


  <author email="ianabraham21@gmail.com">Ian Abraham</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sphero_driver</run_depend>
    <run_depend>sphero_description</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>python_orocos_kdl</run_depend>
    <run_depend>rospy</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
